client/app/main.css
/* ... */
.icon_downmenu {
  background: url('../assets/images/icon_downmenu.png') no-repeat;
  width:18px;
  height: 18px;
  display: inline-block;
  position: absolute;
  top: 7px;
  right: 0;
  cursor: pointer;
}
.icon_invite {
  background: url('../assets/images/icon_invite_dark.png') no-repeat;
  width: 15px;
  height: 13px;
}
.icon_invite.light {
  background-image: url('../assets/images/icon_invite.png');
}
.icon_team {
  background: url('../assets/images/icon_team_dark.png') no-repeat;
  width: 15px;
  height: 10px;
}
.icon_team.light {
  background-image: url('../assets/images/icon_team.png');
}
.icon_signout {
  background: url('../assets/images/icon_signout_dark.png') no-repeat;
  width:17px;
  height: 14px;
}
.icon_signout.light {
  background-image: url('../assets/images/icon_signout.png');
}
.icon_network_error {
    background-image: url('../assets/images/icon_network_error.png');
}
.fileicon {
  background: url('../assets/images/fileicons.png') no-repeat;
  width: 26px;
  height: 31px;
  display: block;
  margin: auto;
}
.fileicon-img,
.fileicon-jpg,
.fileicon-png,
.fileicon-gif {
  background-position: -78px -93px;
}
.fileicon-img-dropbox,
.fileicon-jpg-dropbox,
.fileicon-png-dropbox,
.fileicon-gif-dropbox {
  background-position: -104px -93px;
}
.fileicon-img-google-drive,
.fileicon-jpg-google-drive,
.fileicon-png-google-drive,
.fileicon-gif-google-drive {
  background-position: -130px 0px;
}
.fileicon-pdf {
  background-position: 0px -31px;
}
.fileicon-pdf-dropbox {
  background-position: -26px -31px;
}
.fileicon-pdf-google-drive {
  background-position: -52px -31px;
}
.fileicon-video,
.fileicon-mp4,
.fileicon-mov{
  background-position: 0px -124px;
}
.fileicon-video-dropbox,
.fileicon-mp4-dropbox,
.fileicon-mov-dropbox {
  background-position: -26px -124px;
}
.fileicon-video-google-drive,
.fileicon-mp4-google-drive,
.fileicon-mov-google-drive {
  background-position: -52px -124px;
}
.fileicon-audio,
.fileicon-mp3,
.fileicon-mpeg {
  background-position: -26px 0px;
}
.fileicon-audio-dropbox,
.fileicon-mp3-dropbox,
.fileicon-mpeg-dropbox {
  background-position: 0px -93px;
}
.fileicon-audio-google-drive,
.fileicon-mp3-google-drive,
.fileicon-mpeg-google-drive {
  background-position: -52px 0px;
}
.fileicon-txt {
  background-position: -130px -31px;
}
.fileicon-txt-dropbox {
  background-position: -130px -62px;
}
.fileicon-txt-google-drive {
  background-position: -130px -93px;
}
.fileicon-etc {
  background-position: -78px 0px;
}
.fileicon-etc-dropbox {
  background-position: -78px -31px;
}
.fileicon-etc-google-drive {
  background-position: 0px -62px;
}
.fileicon-zip {
  background: url('../assets/images/fileicon_zip.png') no-repeat;
  width: 26px;
  height: 31px;
  display: block;
  margin: auto;
}
.fileicon-ppt {
  background-position: 0px 0px;
}
.fileicon-ppt-dropbox {
  background-position: -26px -93px;
}
.fileicon-ppt-google-drive {
  background-position: -52px -93px;
}
.fileicon-excel {
  background-position: -104px 0px;
}
.fileicon-excel-dropbox {
  background-position: -104px -31px;
}
.fileicon-excel-google-drive {
  background-position: -104px -62px;
}
.fileicon-hwp {
  background-position: -26px -62px;
}
.fileicon-hwp-dropbox {
  background-position: -52px -62px;
}
.fileicon-hwp-google-drive {
  background-position: -78px -62px;
}
.fileicon-document-google-drive {
  background-position: -78px -124px;
}
.fileicon-spreadsheet-google-drive {
  background-position: -130px -124px;
}
.fileicon-presentation-google-drive {
  background-position: -104px -124px;
}

.icon-more-member {
  background: url('../assets/images/icon_more_member.png') no-repeat;
  width: 15px;
  height: 15px;
}
.icon-loading {
  background: url('../assets/images/jd_loading.gif') center center no-repeat;
  width: 150px;
  height: 150px;
}
.icon-loading-img {
  background: url('../assets/images/jd_loading.gif') center center no-repeat;
}
.icon-loading-small {
    background-image: url('../assets/images/icon_loading.gif');
    background-size: 11px 11px;
    width: 11px;
    height: 11px;
  vertical-align: middle;
    display: inline-block;
}
.image-background {
  background: url('../assets/images/checkered.png');
  min-width: 40px;
  min-height: 40px;
}

.tutorial-clicker {
  width: 50px;
  height: 50px;
  background: url('../assets/images/tutorial-click-icon.png') no-repeat;
  cursor: pointer;
  z-index: 1041;
}

.file-item-meta__comments {
  background-image: url('../assets/images/icon-comment.png');
}

.private-topic-icon {
  background: url('../assets/images/private-topic.svg') no-repeat;
}

.integration-desc-google-drive-1 {
  background-image: url('../assets/images/googledrive-share.png');
}
.integration-desc-google-drive-2 {
  background-image: url('../assets/images/googledrive-filetype.png');
}
.integration-desc-google-drive-3 {
  background-image: url('../assets/images/googledrive-popup.png');
}

.integration-desc-dropbox-1 {
  background-image: url('../assets/images/dropbox-share.png');
}
.integration-desc-dropbox-2 {
  background-image: url('../assets/images/dropbox-link.png');
}
.integration-desc-dropbox-3 {
  background-image: url('../assets/images/dropbox-popup.png');
}

#file-upload-menu .icon-notebook {
  font-size: 16px;
}
#file-upload-menu .icon-google-drive {
  background-image: url('../assets/images/icon_google_drive.png');
  width: 16px;
  height: 16px;
  display: inline-block;
}
#file-upload-menu li:hover .icon-google-drive {
  background-image: url('../assets/images/icon_google_drive_white.png');
  width: 16px;
  height: 16px;
  display: inline-block;
}
#file-upload-menu .icon-dropbox {
  background-image: url('../assets/images/icon_dropbox.png');
  width: 16px;
  height: 16px;
  display: inline-block;
}
#file-upload-menu li:hover .icon-dropbox {
  background-image: url('../assets/images/icon_dropbox_white.png');
  width: 16px;
  height: 16px;
  display: inline-block;
}
/* ... */

